# Racing-Choreographies-parser

./: .gitignore  CMakeLists.txt  CMakePresets.json  README  vcpkg.json
cmake/: run_with_stdin.cmake
grammar/: RacingChoreo.g4
src/: AstBuilderVisitor.cpp  AstBuilderVisitor.h  AstJson.cpp  AstJson.h  AstPrinter.cpp  AstPrinter.h  ErrorListener.cpp  ErrorListener.h  Json.h  Validation.cpp  Validation.h  main.cpp
src/ast/: Ast.h  SourceLocation.h
src/runtime/: RaceMemory.h  RuntimeError.h  Store.h  Trace.h  Value.h
src/sim/: SimOptions.h  SimulationResult.h  Simulator.cpp  Simulator.h
tests/: call_simple.rc  err_01.rc  err_lex_01.rc  err_sem_01.rc  err_sem_02.rc  esempio.rc  if_local.rc  if_race_discharge.rc  ok_01.rc  ok_02.rc  race_left.rc
